[package]
name = "vinyldns_rs"
version = "0.1.0"
authors = ["shua <me@nonstd.in>"]
edition = "2018"

[dependencies]
failure = "*"
log = "*"
env_logger = "*"
hyper = "*"
reqwest = "0.9.8"
sha2 = "*"
regex = "*"
chrono = "0.4"
hmac = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"